update api to agones v0.4.0

--- a/k8s/gameserver.yaml
+++ b/k8s/gameserver.yaml
@@ -3,8 +3,10 @@ kind: GameServer
 metadata:
   name: gameserver-example
 spec:
-  portPolicy: "dynamic"
-  containerPort: 9410
+  ports:
+  - name: default
+    portPolicy: "dynamic"
+    containerPort: 9410
   health:
     initialDelaySeconds: 60
     periodSeconds: 10
