--- a/k8s/fleet.yaml
+++ b/k8s/fleet.yaml
@@ -7,8 +7,10 @@ spec:
   template:
     # GameServer specification
     spec:
-      portPolicy: "dynamic"
-      containerPort: 9410
+      ports:
+      - name: default
+        portPolicy: "dynamic"
+        containerPort: 9410
       health:
         initialDelaySeconds: 60
         periodSeconds: 10
