--- a/k8s/gameserver.yaml
+++ b/k8s/gameserver.yaml
@@ -8,8 +8,7 @@ spec:
     portPolicy: "dynamic"
     containerPort: 9410
   health:
-    initialDelaySeconds: 60
-    periodSeconds: 10
+    disabled: true
   template:
     spec:
       containers:
