--- a/k8s/gameserver.yaml
+++ b/k8s/gameserver.yaml
@@ -13,5 +13,4 @@ spec:
     spec:
       containers:
       - name: game
-        image: bosakmaw/godot-agones:latest
-        imagePullPolicy: Always
+        image: bosakmaw/godot-agones:v0.7.0
